--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     est accusamus magnam dolorum eius optio sint recusandae in, suscipit quos facilis eveniet culpa neque?</p>
 
 <body>
-
+<p> Program is fun </p>
 </body>
 
 </html>
