--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>Document</title>
 </head>
 <h1>Mihaj</h1>
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero molestias voluptatibus ipsum reprehenderit? Ab quasi
-    est accusamus magnam dolorum eius optio sint recusandae in, suscipit quos facilis eveniet culpa neque?</p>
+<p>Allah</p>
 
 <body>
-<p> Program is fun </p>
+    <p> Program is fun </p>
 </body>
 
 </html>
