--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@ Allah is Almighty
 my name is Minhaj I love to do code
 done <data value=""></data>
 done
-    this the way
+this the way
+
+now should go to learn some code
 
 </html>
